harbor/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-ui
  namespace: harbor
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: gateway
    sectionName: harbor
  hostnames:
  - harbor.k8s.orb.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: harbor
      port: 80
